# hw-02_huffman

common/: run-tests
hw-02_huffman/: CMakeLists.txt  README.md
hw-02_huffman/include/: exceptions.hpp  help_functions.hpp  huffman.hpp  main_functions.hpp  statistics.hpp  tree.hpp
hw-02_huffman/src/: exceptions.cpp  help_functions.cpp  huffman.cpp  main.cpp  main_functions.cpp  statistics.cpp  tree.cpp
hw-02_huffman/test/: lib-test.cpp  sample_big.txt  sample_text.txt
